[Fix] Dirty hack to avoid the scrollbar issue
https://github.com/twbs/bootstrap/issues/9862

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -88,3 +88,7 @@ body {
   padding-bottom: 1em;
 }
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
